# obbb

./: BILLS-119hr1eas.html  CLAUDE.md  graphrag_config.json  graphrag_documents.json  graphrag_queries.json  package.json  pyproject.toml  requirements.txt
data/: parsed_sections.json  real_defense_data.json
graphrag_workspace_lite/: chunks_kv_data.pkl  graph_igraph_data.pklz  map_e2r_blob_data.pkl  map_r2c_blob_data.pkl
high_signal_site/: accuracy-guidelines.html  claim-verification-report.html  deep-index.html  index.html  opportunities.json  robots.txt  stacks.json  x7j9k2m5p8v3.html
research/: accuracy-guidelines.md  additional-investment-strategies.md  claim-verification-report.md  comprehensive-opportunity-summary.md  cross-checked-opportunities.md  index.md  master-index.md  nyc-investor-quick-start.md  nyc-pe-banking-playbook-v2.md  nyc-pe-banking-playbook.md  opportunities.json  opportunity-stack-ranking.md  research-methodology-assessment.md
scripts/: add_frontmatter.py  build_graphrag.py  build_index.py  build_knowledge_graph.py  create_action_memo_site.py  create_high_signal_site.py  fixed_parser.py  generate_site.py  interactive_browser.py  query_graphrag.py  run_fast_graphrag.py  run_fast_graphrag_lite.py  run_graphrag.py  setup_graphrag.py  smart_parser.py  test_fast_graphrag.py  verify_claims.py
site/: additional-investment-strategies.html  comprehensive-opportunity-summary.html  cross-checked-opportunities.html  index-stats.json  index.html  master-index.html  nyc-investor-quick-start.html  nyc-pe-banking-playbook-v2.html  opportunities.html  (+3 more)
(+46 files in other folders)
